# martel-print-mech-analyser-firmware

./: .clang-format  .clangd  .gitignore  meson.build  microblaze-xilinx-elf.build  setup.txt
.devcontainer/: devcontainer.json
lib/bsp/: Makefile  meson.build  system.mss
lib/bsp/microblaze_0/include/: xparameters.h
lib/bsp/microblaze_0/libsrc/bram_v4_8/src/: xbram_g.c
lib/bsp/microblaze_0/libsrc/gpio_v4_9/src/: xgpio_g.c
lib/bsp/microblaze_0/libsrc/intc_v3_15/src/: xintc_g.c
lib/bsp/microblaze_0/libsrc/llfifo_v5_5/src/: xllfifo_g.c
lib/bsp/microblaze_0/libsrc/spi_v4_9/src/: xspi_g.c
src/: interrupt.cpp  interrupt.hpp  io.cpp  io.hpp  main.cpp  mech.cpp  mech.hpp  meson.build  protocol.cpp  protocol.hpp  thermistor.cpp  thermistor.hpp  uart.cpp  uart.hpp
